hentet rick and morty api

--- a/Category_blogg/src/styles/main.scss
+++ b/Category_blogg/src/styles/main.scss
@@ -9,5 +9,18 @@ body{
     background-color: $colorBlue;
 
 
+.status-box{
+    display: inline-block;
+    height: 30px;
+    width: 30px;
+}    
+.Alive{
+    background-color: green;
+}
+
+.Dead{
+    background-color: red;
+}
+
 
 }
