--- a/ressurser/main.scss
+++ b/ressurser/main.scss
@@ -23,7 +23,7 @@
             }
         }
     }
-    .logginn {
+    .login {
         max-width: 500px;
         width: 100%;
         display: flex;
